Fixed border radius of expand/collapse of timeline plugin

--- a/web/client/themes/default/less/timeline.less
+++ b/web/client/themes/default/less/timeline.less
@@ -379,9 +379,9 @@
     }
     .ms-timeline-expand {
         flex-shrink: 0;
-        border-radius: 0;
-        height: 34px;
-        width: 34px;
+        border-radius: 4px;
+        height: 30px;
+        width: 30px;
     }
 
     /* local mixin to highlight handlers on timeline, used on active and over */
